Views and styling

--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :address %>
   <%= f.input :phone_number %>
   <%= f.input :category, collection: %w(chinese italian japanese french belgian), prompt: "Select a category" %>
-  <%= f.submit "Submit restaurant", class: "btn btn-primary" %>
+  <%= f.submit "edit restaurant", class: "btn btn-primary" %>
 <% end %>
