--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,9 +1,16 @@
 <div class="container">
   <div class="row">
     <h2><%= @restaurant.name %></h2>
-    <p><%= @restaurant.address %></p>
-    <p><%= @restaurant.phone_number %></p>
-    <p><%= @restaurant.category %></p>
+    <p>Address: <%= @restaurant.address %></p>
+    <p>Phone Number: <%= @restaurant.phone_number %></p>
+    <p>Category: <%= @restaurant.category.capitalize %></p>
+    <div class="review-block">
+      <% @restaurant.reviews.each do |review| %>
+        <p>Rating: <%= "*" * review.rating %></p>
+        <p>Comments: <%= review.content %></p>
+      <% end %>
+    </div>
+    <%= link_to "Add review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
     <hr />
     <%= link_to "Return to list of restaurants", restaurants_path %>
   </div>
