--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content %>
   <%= f.input :rating, collection: %w(0 1 2 3 4 5), prompt: "Select a rating" %>
-  <%= f.submit "add a review", class: "btn btn-primary" %>
+  <%= f.submit "Submit review", class: "btn btn-primary" %>
 <% end %>
